large update, still kinda meh

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <a href="#">Plan your Visit</a>
         </div>
         <div class="learn">
-          <a href="#">Learn about the Park</a>
+          <a href="#">Learn About the Park</a>
         </div>
         <div class="involved">
           <a href="#">Get Involved</a>
@@ -27,8 +27,10 @@
         <h1>Yosemite Park Guide</h1>
       </div>
       <h2>Come explore California’s beautiful wilderness.<br><br>
-      Always open. Reservations are not available or required to enter the park.</h2>
-    </div>  
+      <div class="always">
+        Always open. Reservations are not available or required to enter the park.</h2>
+      </div>
+      </div>  
   </header>
   <main>
     <div class="main-body">    
@@ -45,7 +47,7 @@
         <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="bonfire">
       </div>  
       <p>
-        Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.
+        Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. <span>Check for current fire restrictions</span>.
       </p>
     </div>
     <div class="lodging">
@@ -53,24 +55,24 @@
         <img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="ambulance">
       </div>
       <p>
-        We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).
+        We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <span>park entrance fee upon arrival</span> (there's no need to pay it in advance).
       </p>
     </div>
   </asside>     
   
   <footer>
-    <div class="footerImg">
-      <img src="assets/footer_img.jpg" alt=mountain2>
-    </div>
+    <div class="footerImg"></div>
     <nav>
-      <div class="plan">
+      <div class="footerNav">
+        <div class="plan">
         <a href="#">Plan your Visit</a>
-      </div>
-      <div class="learn">
+        </div>
+        <div class="learn">
         <a href="#">Learn about the Park</a>
-      </div>
-      <div class="involved">
+        </div>
+        <div class="involved">
         <a href="#">Get Involved</a>
+        </div>
       </div>
     </nav>
   </footer>
