another update, getting close

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
           <a href="#">Get Involved</a>
         </div>
     </nav>
-      
-    <div class="headerImg">
+    
+    <div class="container">
       <img src="assets/header_img.jpg" alt="mountain1">
-    </div>
-    <div class="main-header">
+
+      <div class="main-header">
       <div class="ypg">
         <h1>Yosemite Park Guide</h1>
       </div>
